--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -1,5 +1,7 @@
-.home {
+html {
   scroll-behavior: smooth;
+}
+.home {
   background-image: url('../images/background.png');
   color: white;
   background-repeat: repeat;
